manifests/dev/05-jicofo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jicofo
  namespace: jitsi
  labels:
    app: jitsi
    component: jicofo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jitsi
      component: jicofo
  template:
    metadata:
      labels:
        app: jitsi
        component: jicofo
    spec:
      containers:
        - name: jicofo
          image: jitsi/jicofo:stable-9584
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: jicofo-config
              mountPath: /config
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: jicofo-config
          persistentVolumeClaim:
            claimName: jitsi-jicofo-config
